Added filter to GET /orders; No additional properties for order request body allowed
